Cambio nome per la cartella img

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <section id="jumbotron">
         <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
+            <div class="row bg-info debug-mid ms_bg-returnal">
+                <div class="col-4 bg-warning mx-1 my-1">
 
                 </div>
             </div>
