Disposizione grezza elementi  jumbo

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
 
     <section id="jumbotron">
         <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid ms_bg-returnal">
-                <div class="col-4 bg-warning mx-1 my-1">
-
+            <div class="row bg-info  ms_bg-returnal">
+                <div class="col-4 mx-1 my-1 d-flex align-items-end">
+                    <div class="card bg-transparent text-white" style="width: 18rem;">
+                        <img src="./img_6/returnal-hero-banner-logo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Rompi il cerchio</h5>
+                          <p class="card-text fs-7">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascia in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                          <a href="#" class="btn btn-danger rounded-pill">Acquista ora</a>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
