--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                         <!-- INIZIO MAIN  -->
 <main>
 
-    <section id="jumbotron">
-        <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info  ms_bg-returnal">
-                <div class="col-4 mx-1 my-1 d-flex align-items-end">
+    <section id="jumbotron" class="p-3">
+        <div class="container-fluid h-100">
+            <div class="row align-items-end">
+                <div class="col-4 mx-1 my-1 ">
                     <div class="card bg-transparent text-white" style="width: 18rem;">
                         <img src="./img_6/returnal-hero-banner-logo.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Rompi il cerchio</h5>
-                          <p class="card-text fs-7">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascia in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
-                          <a href="#" class="btn btn-danger rounded-pill">Acquista ora</a>
+                          <h5 class="card-title fs-1 ms_no-wrap mb-4 fw-light">Rompi il cerchio</h5>
+                          <p class="card-text ms_fs-13px ">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascia in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                          <a href="#" class="btn btn-sm ms_bg-red ms_fs-11px text-white rounded-pill">Acquista ora</a>
                         </div>
                       </div>
                 </div>
