Stilizzazione top nav

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
 <header>
     <!-- top nav  -->
-<section id="top-nav" class="debug-short">
-
+<section id="top-nav">
+    <nav class="navbar ms_bg-black py-0">
+        <div class="container-fluid px-0 justify-content-end">
+          <a class="navbar-brand" href="#">
+            <img src="./img_6/sony_logo.svg" alt="" height="18">
+          </a>
+        </div>
+      </nav>
 </section>
 <!-- bottom nav  -->
 <nav id="bottom-nav" class="debug-mid">
@@ -24,13 +30,13 @@
                         <!-- INIZIO MAIN  -->
 <main>
 
-    <section id="jumbotron" class="p-3">
+    <section id="jumbotron" class="p-4">
         <div class="container-fluid h-100">
             <div class="row align-items-end">
                 <div class="col-4 mx-1 my-1 ">
                     <div class="card bg-transparent text-white" style="width: 18rem;">
                         <img src="./img_6/returnal-hero-banner-logo.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body ps-0">
                           <h5 class="card-title fs-1 ms_no-wrap mb-4 fw-light">Rompi il cerchio</h5>
                           <p class="card-text ms_fs-13px ">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascia in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
                           <a href="#" class="btn btn-sm ms_bg-red ms_fs-11px text-white rounded-pill">Acquista ora</a>
