--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="row my-5">
                     <div class="col mx-1 my-1 text-center">
                         <p class="text-primary ms_fs-13px mb-0">PLAY HAS NO LIMITS</p>
-                        <h2 class="my-0">Ecco la PlayStation 5</h2>
+                        <h2 class="my-0 fw-light">Ecco la PlayStation 5</h2>
                         <p class="my-4">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                     </div>
             </div>
@@ -195,7 +195,7 @@
                 <div class="col d-flex align-items-center mx-1 my-1">
                         <div class="card bg-transparent text-black border-0 ">
                             <div class="card-body ps-0">
-                              <h2 class="card-title ms_no-wrap mb-4 ">Console PlayStation 5</h2>
+                              <h2 class="card-title ms_no-wrap mb-4 fw-light">Console PlayStation 5</h2>
                               <p class="card-text ms_fs-13px ">Sperimenta la nuova generazione di incredibili gioch PlayStation</p>
                               <a href="#" class="btn btn-primary btn-sm  ms_fs-13px text-white rounded-pill">Maggiori informazioni</a>
                             </div>
@@ -263,13 +263,20 @@
 
     </section>
 
+                                        <!-- MULTIPLAYER  -->
 
-    <section class="ms_section-bg" id="multiplayer">
-        <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid">
-
-                <!-- mettici una card  -->
-                <div class="col-3 bg-warning mx-1 my-1">
+    <section class="py-3" id="multiplayer">
+        <div class="container  py-2">
+            <div class="row  ">
+                <div class="col-4  mx-1 ">
+                    <div class="card bg-transparent text-white border-0">
+                        <img src="./img_6/it-takes-two-logo.png" class="card-img-top w-50" alt="...">
+                        <div class="card-body ps-0">
+                          <h5 class="card-title fs-1 ms_no-wrap mb-4 fw-light">Un'avventura <br> cooperativa <br> selvaggia ti attende</h5>
+                          <p class="card-text ms_fs-13px">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                          <a href="#" class="btn btn-sm ms_bg-red ms_fs-13px text-white rounded-pill">Acquista ora</a>
+                        </div>
+                      </div>
 
                 </div>
 
@@ -281,7 +288,7 @@
 
 
     <section class="ms_section-bg" id="nuove-uscite">
-        <div class="container bg-primary py-2 my-2 ">
+        <div class="container bg-primary">
             <div class="row bg-info debug-mid">
                 <div class="col bg-warning mx-1 my-1">
 
