--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                         <!-- MULTIPLAYER  -->
 
     <section class="py-3" id="multiplayer">
-        <div class="container  py-2">
+        <div class="container-fluid px-4  py-2">
             <div class="row  ">
                 <div class="col-4  mx-1 ">
                     <div class="card bg-transparent text-white border-0">
@@ -285,67 +285,133 @@
         </div>
 
     </section>
+                                      <!-- NUOVE USCITE  -->
 
-
-    <section class="ms_section-bg" id="nuove-uscite">
-        <div class="container bg-primary">
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
-
+    <section class="bg-dark" id="nuove-uscite">
+        <div class="container-fluid px-4 py-4">
+            <div class="row ">
+                <div class="col text-white mx-1 my-1">
+                    <h2>Nuove Uscite</h2>
+                    <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
                 </div>
             </div>
 
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1"> 
+            <div class="row mb-4">
+                <div class="col  mx-1 my-1"> 
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col  mx-1 my-1"> 
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col  mx-1 my-1"> 
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col  mx-1 my-1"> 
+                    <div class="card border-0 bg-transparent">
+                      <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                      <div class="card-body p-0 text-white">
+                        <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                      </div>
+                    </div>
+                </div>
+
+                <div class="col  mx-1 my-1"> 
+                    <div class="card border-0 bg-transparent">
+                      <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                      <div class="card-body p-0 text-white">
+                        <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                      </div>
+                    </div>
 
                 </div>
 
-                <div class="col bg-warning mx-1 my-1"> 
-
-                </div>
-
-                <div class="col bg-warning mx-1 my-1"> 
-
-                </div>
-
-                <div class="col bg-warning mx-1 my-1"> 
-
-                </div>
-
-                <div class="col bg-warning mx-1 my-1"> 
-
-                </div>
-
-                <div class="col bg-warning mx-1 my-1">
+                <div class="col  mx-1 my-1">
+                    <div class="card border-0 bg-transparent">
+                      <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                      <div class="card-body p-0 text-white">
+                        <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                      </div>
+                    </div>
 
                 </div>               
             </div>
 
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1"> 
-
+            <div class="row mb-4">
+              <div class="col  mx-1 my-1"> 
+                <div class="card border-0 bg-transparent">
+                  <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                  <div class="card-body p-0 text-white">
+                    <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                  </div>
                 </div>
+              </div>
 
-                <div class="col bg-warning mx-1 my-1"> 
-
+              <div class="col  mx-1 my-1"> 
+                <div class="card border-0 bg-transparent">
+                  <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                  <div class="card-body p-0 text-white">
+                    <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                  </div>
                 </div>
+              </div>
 
-                <div class="col bg-warning mx-1 my-1"> 
-
+              <div class="col  mx-1 my-1"> 
+                <div class="card border-0 bg-transparent">
+                  <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                  <div class="card-body p-0 text-white">
+                    <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                  </div>
                 </div>
+              </div>
 
-                <div class="col bg-warning mx-1 my-1"> 
+              <div class="col  mx-1 my-1"> 
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                    </div>
+                  </div>
+              </div>
 
-                </div>
+              <div class="col  mx-1 my-1"> 
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/tony-hawks-pro-skater-1-2-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Tony Hawk's&trade; Pro <br> Skater&trade; 1 + 2</p>
+                    </div>
+                  </div>
 
-                <div class="col bg-warning mx-1 my-1"> 
+              </div>
 
-                </div>
+              <div class="col  mx-1 my-1">
+                  <div class="card border-0 bg-transparent">
+                    <img src="img_6/crash-bandicoot-4-its-about-time-store-art.jpg" class="card-img-top border-0 img-thumbnail p-0 ms_bradius-thumbnail" alt="...">
+                    <div class="card-body p-0 text-white">
+                      <p class="ms_fs-11px card-text p-0">Crash Bandicoot 4: It's<br> About Time</p>
+                    </div>
+                  </div>
 
-                <div class="col bg-warning mx-1 my-1">
+              </div>               
+          </div>
 
-                </div>               
-            </div>
 
 
         </div>
@@ -362,7 +428,7 @@
             </div>
             <div class="row bg-info debug-mid">
 
-                <!-- mettici delle card  -->
+                <!-- mettici delle card -->
 
                 <div class="col bg-warning mx-1 my-1">
                     
