Stilizzazione playstation plus

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <!-- PRESENTAZIONE PLAYSTATION  -->
 
     <section id="presentazione" class="py-3">
-        <div class="container  my-2 ">
+        <div class="container-fluid px-5  my-2 ">
             <div class="row  ">
                 <div class="col my-1 mx-1 ">
                     <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
@@ -266,7 +266,7 @@
                                         <!-- MULTIPLAYER  -->
 
     <section class="py-3" id="multiplayer">
-        <div class="container-fluid px-4  py-2">
+        <div class="container-fluid px-5  py-2">
             <div class="row  ">
                 <div class="col-4  mx-1 ">
                     <div class="card bg-transparent text-white border-0">
@@ -288,7 +288,7 @@
                                       <!-- NUOVE USCITE  -->
 
     <section class="bg-dark" id="nuove-uscite">
-        <div class="container-fluid px-4 py-4">
+        <div class="container-fluid px-5 py-4">
             <div class="row ">
                 <div class="col text-white mx-1 my-1">
                     <h2>Nuove Uscite</h2>
@@ -417,7 +417,7 @@
                                <!-- ESPLORA PLAYSTATION 4  -->
 
     <section id="esplora-play" class="py-4">
-        <div class="container-fluid py-2 my-2 ">
+        <div class="container-fluid px-5 py-2 my-2 ">
             <div class="row">
                 <div class="col mx-1 my-1 py-2 text-center">
                   <h2 class="fw-light ">Esplora Playstation&reg; 4 </h2>
@@ -459,24 +459,28 @@
                     </div>
                   </div>
                 </div>
-                
-                
             </div>
-
         </div>
-
     </section>
 
+                                      <!-- ESPLORA PLAYSTATION PLUS  -->
 
-    <section class="ms_section-bg" id="esplora-plus">
-        <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
+    <section  id="esplora-plus" class="ms_bg-gray">
+        <div class="container-fluid px-5 my-2 ">
+            <div class="row align-items-center">
+                <div class="col mx-1">
+                  <div class="card bg-transparent text-black border-0 ">
+                    <div class="card-body ps-0">
+                      <img src="./img_6/ps-plus-logo.png" class="card-img-top" alt="...">
+                      <p class="card-text  ">Migliora la tua esperienza di gioco PlayStation con l'accesso a multigiocatore online, giochi mesnili, sconti esclusivi e altro ancora.</p>
+                      <a href="#" class="btn btn-light btn-sm  ms_fs-13px text-primary rounded-pill">Esplora PlayStation Plus</a>
+                    </div>
+                  </div>
 
                 </div>
 
-                <div class="col bg-warning mx-1 my-1">
-
+                <div class="col mx-1">
+                  <img src="./img_6/ps-plus-april-monthly-games-featured-image-block.png" class="img-fluid" alt="">
                 </div>
 
             </div>
