--- a/index.html
+++ b/index.html
@@ -489,25 +489,27 @@
 
     </section>
 
+                                              <!-- NUOVI SCONTI  -->
 
-    <section class="ms_section-bg" id="nuovi-sconti">
-        <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
-
+    <section id="nuovi-sconti" class="pt-4 pb-5">
+        <div class="container  py-2 my-2 px-2">
+            <div class="row  ">
+                <div class="col  mx-1 mt-3 mb-5 text-center">
+                  <h2 class="fw-light ">Nuovi sconti sul PlayStation Store</h2>
+                  <p class="my-4">Sconti pazzeschi, collezioni curate e sadi stagionali su PS5, PS4e PS VR, tutti in un unico posto</p>
                 </div>
             </div>
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
-
+            <div class="row ">
+                <div class="col  mx-1 my-1">
+                  <img src="./img_6/playstation-store-games-under-20-spotlight.jpg" class="img-fluid" alt="">
                 </div>
 
-                <div class="col bg-warning mx-1 my-1">
-
+                <div class="col  mx-1 my-1">
+                  <img src="./img_6/playstation-store-golden-week-sale-spotlight.jpg" class="img-fluid" alt="">
                 </div>
 
-                <div class="col bg-warning mx-1 my-1">
-
+                <div class="col  mx-1 my-1">
+                  <img src="./img_6/playstation-store-free-to-play-spotlight.png" class="img-fluid" alt="">
                 </div>
 
             </div>
