--- a/index.html
+++ b/index.html
@@ -519,14 +519,22 @@
     </section>
 
 
-    <section class="ms_section-bg" id="esplora-now">
-        <div class="container bg-primary py-2 my-2 ">
-            <div class="row bg-info debug-mid">
-                <div class="col bg-warning mx-1 my-1">
+    <section  id="esplora-now" class="ms_bg-darkblue">
+        <div class="container  py-4  ">
+            <div class="row align-items-center">
+                <div class="col mx-1 my-1">
+                  <div class="card bg-transparent text-black border-0 ">
+                    <div class="card-body text-white">
+                      <img src="./img_6/ps-now-logo-two-column.png" class="w-50" alt="...">
+                      <p class="card-text  my-4">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4,PS3 e PS2 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                      <a href="#" class="btn ms_bg-white btn-sm  ms_fs-13px text-black rounded-pill">Esplora PlayStation Now</a>
+                    </div>
+                  </div>
 
                 </div>
 
-                <div class="col bg-warning mx-1 my-1">
+                <div class="col-5">
+                  <img src="./img_6/ps-now-april-featured-image-block.png" class="img-fluid" alt="">
 
                 </div>
 
