--- a/index.html
+++ b/index.html
@@ -152,32 +152,32 @@
     <section id="presentazione" class="py-3">
         <div class="container-fluid px-5  my-2 ">
             <div class="row  ">
-                <div class="col my-1 mx-1 ">
-                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
+                <div class="col  my-1 mx-1 ">
+                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_offset-hover  ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
                 </div>
 
                 <div class="col mx-1 my-1">
-                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
-
-                </div>
-
-                <div class="col mx-1 my-1">
-                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
+                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail  ms_offset-hover ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
 
                 </div>
 
                 <div class="col mx-1 my-1">
-                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
+                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_offset-hover ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
 
                 </div>
 
                 <div class="col mx-1 my-1">
-                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
+                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail ms_offset-hover ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
 
                 </div>
 
                 <div class="col mx-1 my-1">
-                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail ms_bradius-thumbnail border-primary border-2" alt="...">
+                    <img src="./img_6/returnal-listing-thumb-01-ps5.jpg" class="img-thumbnail ms_offset-hover ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
+
+                </div>
+
+                <div class="col mx-1 my-1">
+                    <img src="./img_6/ratchet-and-clank-rift-apart-keyart.jpg" class="img-thumbnail ms_offset-hover ms_bradius-thumbnail ms_borderblue-0 border-2" alt="...">
 
                 </div>
 
@@ -584,7 +584,7 @@
                         <!-- FINE MAIN  -->
 
                         <!-- INIZIO FOOTER  -->
-<footer class="bg-primary px-5 pt-4 pb-5">
+<footer class="px-5 pt-4 pb-5">
     <div class="container-fluid pt-5" >
       <div class="row">
         <div class="col-6 ps-0 pt-3"> 
@@ -634,7 +634,7 @@
 
           <div class="row">
             <div class="col-6 ps-0 mt-3 text-white">
-              <p class="ms_fs-13px mb-4"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero officiis tempore impedit quis explicabo et asperiores delectus aspernatur cumque? Accusamus eligendi, iusto omnis ipsa voluptate aspernatur cumque animi <a href="#" class="text-white">veniam quis</a>.</p>
+              <p class="ms_fs-13px mb-4"> Website ©2022 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#" class="text-white">Maggiori info.</a></p>
 
             </div>
           </div>
