--- a/index.html
+++ b/index.html
@@ -33,66 +33,66 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item position-static dropdown">
+                <a class="nav-link dropdown-toggle text-black active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Giochi
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-black" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item position-static dropdown">
                 <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Hardware
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-black" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item position-static dropdown">
                 <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Servizi
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-black" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item position-static dropdown">
                 <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Novità
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-black" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item position-static dropdown">
                 <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Fai acquisti
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-black" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item position-static dropdown">
                 <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Supporto
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu m-0 border-0 rounded-0 w-100" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item text-black" href="#">Action</a></li>
                   <li><a class="dropdown-item text-black" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
@@ -184,20 +184,20 @@
             </div>
 
             <div class="row my-5">
-                    <div class="col mx-1 my-1 text-center">
+                    <div class="col mx-1 mt-4 text-center">
                         <p class="text-primary ms_fs-13px mb-0">PLAY HAS NO LIMITS</p>
                         <h2 class="my-0 fw-light">Ecco la PlayStation 5</h2>
-                        <p class="my-4">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                        <p class="mt-6 ms_gray">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                     </div>
             </div>
 
             <div class="row">
-                <div class="col d-flex align-items-center mx-1 my-1">
+                <div class="col d-flex justify-content-center align-items-center mx-1 my-1">
                         <div class="card bg-transparent text-black border-0 ">
                             <div class="card-body ps-0">
-                              <h2 class="card-title ms_no-wrap mb-4 fw-light">Console PlayStation 5</h2>
-                              <p class="card-text ms_fs-13px ">Sperimenta la nuova generazione di incredibili gioch PlayStation</p>
-                              <a href="#" class="btn btn-primary btn-sm  ms_fs-13px text-white rounded-pill">Maggiori informazioni</a>
+                              <h2 class="card-title fs-1 ms_no-wrap mb-4 fw-light">Console PlayStation 5</h2>
+                              <p class="ms_gray card-text ">Sperimenta la nuova generazione di incredibili gioch PlayStation.</p>
+                              <a href="#" class="btn btn-primary btn-sm  text-white rounded-pill">Maggiori informazioni</a>
                             </div>
                           </div>
                 </div>
